0.1691
    - EXPERIMTANL column method think about separator
    - removed EXPERIMENTAL col method.
    - added EXPERIMENTAL separater method
    - added EXPERIMENTAL select prefix option.
    - fixed bug that data_source DEPRECATED warnings pirnt STDERR
    - fixed bug that type_rule from option can't receive filter name
0.1690
    - use latest Object::Simple features
0.1689
    - added EXPERIMENTAL available_data_type
    - simplified type_rule
    - changed type_rule arguments format
    - added EXPERIMENTAL DBIx::Custom::Model result_filter attribute
    - added EXPERIMETNAL DBIx::Custom::Result filter_off method
    - EXPERIMENTAL type_rule can receive filter name
0.1688
    - fixed bug that model insert, update, delete select can't
      odd number arguments
    - improved type_rule method
0.1687
    - added EXPERIMENTAL type_rule method
    - added EXPERIMENTAL execute() type_rule_off option
    - execute method can second argument as parameter
0.1686
    - select() column option can receive array reference in array.
      This is EXPERIMENTAL
    - select() EXPERIMETNAL column option hash format
      return table.column, not table__column
    - added EXPERIMENTAL col method.
    - set reserved_word_quote automatically from driver name
0.1685
    - insert_at, update_at, delete_at, select_at is DEPRECATED!
      use insert, update, delete, select method and id option.
    - insert, insert_at, update, update_at can receive odd number arguments,
      first one is parameter.
0.1684
    - added DBIx::Custom::Result all method, this is alias for fetch_hash_all
    - added DBIx::Custom::Result one method, this is alias for fetch_hash_first
    - DBIx::Custom::Result fetch_hash_first can recieve argument
    - select() column option can receive hash reference. This is EXPERIMENTAL
    - update_param_tag is DEPRECATED! use update_param instead.
    - insert_param_tag is DEPRECATED! use insert_param instead.