@@ -79,76 +79,6 @@ sub AUTOLOAD {
     }
 }
 
-sub apply_filter { shift->_apply_filter(@_) }
-
-sub _apply_filter {
-    my ($self, $table, @cinfos) = @_;
-
-    # Initialize filters
-    $self->{filter} ||= {};
-    $self->{filter}{out} ||= {};
-    $self->{filter}{in} ||= {};
-    $self->{filter}{end} ||= {};
-    
-    # Usage
-    my $usage = "Usage: \$dbi->apply_filter(" .
-                "TABLE, COLUMN1, {in => INFILTER1, out => OUTFILTER1, end => ENDFILTER1}, " .
-                "COLUMN2, {in => INFILTER2, out => OUTFILTER2, end => ENDFILTER2}, ...)";
-    
-    # Apply filter
-    for (my $i = 0; $i < @cinfos; $i += 2) {
-        
-        # Column
-        my $column = $cinfos[$i];
-        if (ref $column eq 'ARRAY') {
-            foreach my $c (@$column) {
-                push @cinfos, $c, $cinfos[$i + 1];
-            }
-            next;
-        }
-        
-        # Filter infomation
-        my $finfo = $cinfos[$i + 1] || {};
-        croak "$usage (table: $table) " . _subname
-          unless  ref $finfo eq 'HASH';
-        foreach my $ftype (keys %$finfo) {
-            croak "$usage (table: $table) " . _subname
-              unless $ftype eq 'in' || $ftype eq 'out' || $ftype eq 'end'; 
-        }
-        
-        # Set filters
-        foreach my $way (qw/in out end/) {
-        
-            # Filter
-            my $filter = $finfo->{$way};
-            
-            # Filter state
-            my $state = !exists $finfo->{$way} ? 'not_exists'
-                      : !defined $filter        ? 'not_defined'
-                      : ref $filter eq 'CODE'   ? 'code'
-                      : 'name';
-            
-            # Filter is not exists
-            next if $state eq 'not_exists';
-            
-            # Check filter name
-            croak qq{Filter "$filter" is not registered } . _subname
-              if  $state eq 'name'
-               && ! exists $self->filters->{$filter};
-            
-            # Set filter
-            my $f = $state eq 'not_defined' ? undef
-                  : $state eq 'code'        ? $filter
-                  : $self->filters->{$filter};
-            $self->{filter}{$way}{$table}{$column} = $f;
-            $self->{filter}{$way}{$table}{"$table.$column"} = $f;
-            $self->{filter}{$way}{$table}{"${table}__$column"} = $f;
-        }
-    }
-    
-    return $self;
-}
-
 sub assign_param {
     my ($self, $param) = @_;
     
@@ -375,14 +305,14 @@ sub create_model {
     my $filter = ref $model->filter eq 'HASH'
                ? [%{$model->filter}]
                : $model->filter;
-    $self->apply_filter($model->table, @$filter);
+    $self->_apply_filter($model->table, @$filter);
     my $result_filter = ref $model->result_filter eq 'HASH'
                ? [%{$model->result_filter}]
                : $model->result_filter;
     for (my $i = 1; $i < @$result_filter; $i += 2) {
         $result_filter->[$i] = {in => $result_filter->[$i]};
     }
-    $self->apply_filter($model->table, @$result_filter);
+    $self->_apply_filter($model->table, @$result_filter);
     
     # Associate table with model
     croak "Table name is duplicated " . _subname
@@ -478,6 +408,7 @@ sub execute {
                 my $filter_name_alias = $filter_name;
                 $filter_name_alias =~ s/^$alias\./$table\./;
                 $filter_name_alias =~ s/^${alias}__/${table}__/; 
+                $filter_name_alias =~ s/^${alias}-/${table}-/; 
                 $self->{filter}{$type}{$table}{$filter_name_alias}
                   = $self->{filter}{$type}{$alias}{$filter_name}
             }
@@ -1182,6 +1113,75 @@ sub where {
     );
 }
 
+sub _apply_filter {
+    my ($self, $table, @cinfos) = @_;
+
+    # Initialize filters
+    $self->{filter} ||= {};
+    $self->{filter}{out} ||= {};
+    $self->{filter}{in} ||= {};
+    $self->{filter}{end} ||= {};
+    
+    # Usage
+    my $usage = "Usage: \$dbi->apply_filter(" .
+                "TABLE, COLUMN1, {in => INFILTER1, out => OUTFILTER1, end => ENDFILTER1}, " .
+                "COLUMN2, {in => INFILTER2, out => OUTFILTER2, end => ENDFILTER2}, ...)";
+    
+    # Apply filter
+    for (my $i = 0; $i < @cinfos; $i += 2) {
+        
+        # Column
+        my $column = $cinfos[$i];
+        if (ref $column eq 'ARRAY') {
+            foreach my $c (@$column) {
+                push @cinfos, $c, $cinfos[$i + 1];
+            }
+            next;
+        }
+        
+        # Filter infomation
+        my $finfo = $cinfos[$i + 1] || {};
+        croak "$usage (table: $table) " . _subname
+          unless  ref $finfo eq 'HASH';
+        foreach my $ftype (keys %$finfo) {
+            croak "$usage (table: $table) " . _subname
+              unless $ftype eq 'in' || $ftype eq 'out' || $ftype eq 'end'; 
+        }
+        
+        # Set filters
+        foreach my $way (qw/in out end/) {
+        
+            # Filter
+            my $filter = $finfo->{$way};
+            
+            # Filter state
+            my $state = !exists $finfo->{$way} ? 'not_exists'
+                      : !defined $filter        ? 'not_defined'
+                      : ref $filter eq 'CODE'   ? 'code'
+                      : 'name';
+            
+            # Filter is not exists
+            next if $state eq 'not_exists';
+            
+            # Check filter name
+            croak qq{Filter "$filter" is not registered } . _subname
+              if  $state eq 'name'
+               && ! exists $self->filters->{$filter};
+            
+            # Set filter
+            my $f = $state eq 'not_defined' ? undef
+                  : $state eq 'code'        ? $filter
+                  : $self->filters->{$filter};
+            $self->{filter}{$way}{$table}{$column} = $f;
+            $self->{filter}{$way}{$table}{"$table.$column"} = $f;
+            $self->{filter}{$way}{$table}{"${table}__$column"} = $f;
+            $self->{filter}{$way}{$table}{"${table}-$column"} = $f;
+        }
+    }
+    
+    return $self;
+}
+
 sub _create_bind_values {
     my ($self, $params, $columns, $filter, $type) = @_;
     
@@ -1425,6 +1425,17 @@ sub _where_to_obj {
 }
 
 # DEPRECATED!
+sub apply_filter {
+    my $self = shift;
+    
+    warn "apply_filter is DEPRECATED! " . 
+         "use type_rule method, DBIx::Custom::Result filter method, " .
+         "and DBIx::Custom::Model result_filter method instead";
+    
+    return $self->_apply_filter(@_);
+}
+
+# DEPRECATED!
 our %SELECT_AT_ARGS = (%SELECT_ARGS, where => 1, primary_key => 1);
 sub select_at {
     my ($self, %args) = @_;
@@ -1544,19 +1555,18 @@ sub register_tag {
 }
 
 # DEPRECATED!
-__PACKAGE__->attr('data_source');
+has 'data_source';
 
 # DEPRECATED!
-__PACKAGE__->attr(
-    dbi_options => sub { {} },
-    filter_check  => 1
-);
+has dbi_options => sub { {} },
+    filter_check  => 1;
+
 
 # DEPRECATED!
 sub default_bind_filter {
     my $self = shift;
     
-    warn "default_bind_filter is DEPRECATED! use apply_filter instead\n";
+    warn "default_bind_filter is DEPRECATED!";
     
     if (@_) {
         my $fname = $_[0];
@@ -1580,7 +1590,7 @@ sub default_bind_filter {
 sub default_fetch_filter {
     my $self = shift;
 
-    warn "default_fetch_filter is DEPRECATED! use apply_filter instead\n";
+    warn "default_fetch_filter is DEPRECATED!";
     
     if (@_) {
         my $fname = $_[0];
@@ -1696,6 +1706,7 @@ DBIx::Custom - Useful database access, respecting SQL!
     # Select
     my $result = $dbi->select(
         table  => 'book',
+        column => ['title', 'author'],
         where  => {author => 'Ken'},
     );
 
@@ -1703,8 +1714,8 @@ DBIx::Custom - Useful database access, respecting SQL!
     my $result = $dbi->select(
         table  => 'book',
         column => [
-            'book.author as book__author',
-            'company.name as company__name'
+            {book => [qw/title author/]},
+            {company => ['name']}
         ],
         where  => {'book.author' => 'Ken'},
         join => ['left outer join company on book.company_id = company.id'],
@@ -1897,7 +1908,7 @@ and implements the following new ones.
 
 Get available data type.
 
-=head2 C<apply_filter>
+=head2 C<apply_filter> DEPRECATED!
 
     $dbi->apply_filter(
         'book',
@@ -1924,6 +1935,7 @@ Filter is applied to the follwoing tree column name pattern.
     1. Column        : author
     2. Table.Column  : book.author
     3. Table__Column : book__author
+    4. Table-Column  : book-author
 
 If column name is duplicate with other table,
 Main filter specified by C<table> option is used.
@@ -1949,24 +1961,29 @@ Create assign parameter.
 
 This is equal to C<update_param> exept that set is not added.
 
-=head2 C<col> EXPERIMETNAL
-
-    my $column = $model->col(book => ['author', 'title']);
-
-Create column clause. The follwoing column clause is created.
-
-    book.author as "book.author",
-    book.title as "book.title"
-
 =head2 C<column> EXPERIMETNAL
 
     my $column = $dbi->column(book => ['author', 'title']);
 
 Create column clause. The follwoing column clause is created.
 
-    book.author as book__author,
-    book.title as book__title
+    book.author as "book.author",
+    book.title as "book.title"
 
+You can change separator by C<separator> method.
+
+    # Separator is double underbar
+    $dbi->separator('__');
+    
+    book.author as "book__author",
+    book.title as "book__title"
+
+    # Separator is hyphen
+    $dbi->separator('-');
+    
+    book.author as "book-author",
+    book.title as "book-title"
+    
 =head2 C<connect>
 
     my $dbi = DBIx::Custom->connect(
@@ -2433,13 +2450,56 @@ Register filters, used by C<filter> option of many methods.
 
 Filtering rule when data is send into and get from database.
 This has a little complex problem. 
+
 In C<into> you can specify type name as same as type name defined
 by create table, such as C<DATETIME> or C<DATE>.
-but in C<from> you can't specify type name defined by create table.
+Type rule of C<into> is enabled on the following pattern.
+
+=over 4
+
+=item 1. column name
+
+    issue_date
+    issue_datetime
+
+=item 2. table name and column name, separator is dot
+
+    book.issue_date
+    book.issue_datetime
+
+=back
+
+In C<from> you can't specify type name defined by create table.
 You must specify data type, this is internal one.
 You get all data type by C<available_data_type>.
 
     print $dbi->available_data_type;
+
+Type rule of C<from> is enabled on the following pattern.
+
+=item 1. column name
+
+    issue_date
+    issue_datetime
+
+=item 2. table name and column name, separator is dot
+
+    book.issue_date
+    book.issue_datetime
+
+=item 3. table name and column name, separator is double underbar
+
+    book__issue_date
+    book__issue_datetime
+
+=item 4. table name and column name, separator is hyphen
+
+    book-issue_date
+    book-issue_datetime
+
+This is useful in HTML.
+
+=back
 
 You can also specify multiple types
 
@@ -2565,7 +2625,7 @@ join clausees needed when SQL is created is used automatically.
 
     $dbi->select(
         table => 'book',
-        column => ['company.location_id as company__location_id'],
+        column => ['company.location_id as location_id'],
         where => {'company.name' => 'Orange'},
         join => [
             'left outer join company on book.company_id = company.id',
@@ -2576,10 +2636,10 @@ join clausees needed when SQL is created is used automatically.
 In above select, column and where clause contain "company" table,
 the following SQL is created
 
-    select company.location_id as company__location_id
+    select company.location_id as location_id
     from book
       left outer join company on book.company_id = company.id
-    where company.name = Orange
+    where company.name = ?;
 
 =item C<primary_key>
 
