@@ -230,22 +230,10 @@ and implements the following new ones.
 
 Create column clause. The follwoing column clause is created.
 
-    book.author as book__author,
-    book.title as book__title
-
-If column names is omitted, C<columns> attribute of the model is used.
-
-=head2 C<col> EXPERIMETNAL
-
-    my $column = $model->col(book => ['author', 'title']);
-    my $column = $model->col('book');
-
-Create column clause. The follwoing column clause is created.
-
     book.author as "book.author",
     book.title as "book.title"
 
-If column names is omitted, C<columns> attribute of the model is used.
+If Second argument is ommited, all columns set by C<columns> is used.
 
 =head2 C<delete>
 
